--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,44 +7,44 @@ on:
 name: Test Suite
 
 jobs:
-  unit:
-    name: Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+  # unit:
+  #   name: Unit tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout sources
+  #       uses: actions/checkout@v2
 
-      - name: Install toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-      - uses: Swatinem/rust-cache@v1
-        with:
-          cache-on-failure: true
+  #     - name: Install toolchain
+  #       uses: actions-rs/toolchain@v1
+  #       with:
+  #         toolchain: stable
+  #         profile: minimal
+  #         override: true
+  #     - uses: Swatinem/rust-cache@v1
+  #       with:
+  #         cache-on-failure: true
 
-      - name: cargo test
-        run: cargo test --locked --workspace --all-features --lib --bins
+  #     - name: cargo test
+  #       run: cargo test --locked --workspace --all-features --lib --bins
 
-  doc:
-    name: Doc tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-      - name: Install toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-      - uses: Swatinem/rust-cache@v1
-        with:
-          cache-on-failure: true
+  # doc:
+  #   name: Doc tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout sources
+  #       uses: actions/checkout@v2
+  #     - name: Install toolchain
+  #       uses: actions-rs/toolchain@v1
+  #       with:
+  #         toolchain: stable
+  #         profile: minimal
+  #         override: true
+  #     - uses: Swatinem/rust-cache@v1
+  #       with:
+  #         cache-on-failure: true
 
-      - name: cargo test
-        run: cargo test --locked --workspace --all-features --doc
+  #     - name: cargo test
+  #       run: cargo test --locked --workspace --all-features --doc
 
   # integration:
   #   name: Integration tests
