--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sha3 = "0.10.1"
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking"] }
-serde_json = "0.9.0-rc2"
+serde_json = "1.0.82"
+derive_more = "0.99.17"
