--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 sha3 = "0.10.1"
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11" }
 serde_json = "1.0.82"
 derive_more = "0.99.17"
