--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "transaction-decoder"
+name = "transaction_decoder"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,3 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11" }
 serde_json = "1.0.82"
 derive_more = "0.99.17"
+
+[dev-dependencies]
+to_bytes = "0.1.0"
