--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 sha3 = "0.10"
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.11" }
+hex = { version = "0.4", features = ["serde"] }
+reqwest = { version = "0.11", features = ["json"]}
+regex = "1"
 serde_json = "1.0"
 derive_more = "0.99"
