--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ reqwest = { version = "0.11", features = ["json"]}
 regex = "1"
 serde_json = "1.0"
 derive_more = "0.99"
+bytes = "1.2.1"
+thiserror = "1.0.31"
